# cheap

./: .gitignore  CMakeLists.txt  README  README.md  batch_alloc.c  batch_alloc.h  bbox2.c  bbox2.h  bkdr_hash.c  bkdr_hash.h  buffer.c  buffer.h  chunk.c  chunk.h  dsv.c  dsv.h  empty.c  empty.h  event.c  event.h  file_extension.h  file_list.c  file_list.h  file_size.c  file_size.h  float2uint32.c  float2uint32.h  ini.c  ini.h  ispow2.c  ispow2.h  lut.c  lut.h  mkdir.c  mkdir.h  mpool.c  mpool.h  mtcall.c  mtcall.h  nextpow2.c  (+30 more)
src/: batch_alloc.c  batch_alloc.h  bkdr_hash.c  bkdr_hash.h  buffer.h  chunk.h  dsv.c  empty.h  file_extension.c  file_list.h  hex_string.c  hex_string.h  id.c  id.h  ini.c  ispow2.c  ispow2.h  lut.h  mkdir.c  mpool.h  mtcall.c  path_normalize.c  path_normalize.h  path_relative.c  path_stack.h  quadtree.c  rdtsc.c  safe_free.h  set_self_thread_name.c  split_text.c  split_text.h  stack_alloc.h  text_chunk.c  text_chunk.h  text_index.h  tree.c
test/: CMakeLists.txt
test/set_self_thread_name/: CMakeLists.txt  main.c
